@@ -43,7 +43,9 @@ Congratulations on getting this far. :-)
       * MySQL 3.22 and MySQLdb 0.9.0 or later to create a commit database
           (http://www.mysql.com/)
           (http://sourceforge.net/projects/mysql-python)
-      * one of the following syntax highlighting programs:
+      * one of the following syntax highlighting programs/packages:
+          - Pygments 0.9 or later
+              (http://pygments.org)
           - GNU enscript
               (http://www.codento.com/people/mtr/genscript/)
           - Highlight 2.2.10 or later (we recommend 2.4.5 or later)
@@ -396,21 +398,25 @@ links in ViewVC directory listings and give it a try.
 ENABLING SYNTAX COLORATION
 --------------------------
 
-Enscript and Highlight are two programs that can colorize source code
-for a lot of languages.  ViewVC can be configured to use either one.
+ViewVC can use several different syntax coloration engines.  Some of
+them (such as 'enscript', 'highlight', and 'source-highlight') use
+external programs to generate colorized file contents.  Others (such
+as Pygments and py2html) are Python modules.  Some of them are able to
+colorize files of various types; some only understand a single file
+type.  Things can get confusing pretty quickly, and you might have to
+decide which package to use based on what's available for your
+platform.
 
-1) Install Enscript, Highlight, or GNU Source Highlight using your
-   system's package manager, or by downloading from the project home pages.
-
-2) Set either the 'use_enscript' or 'use_highlight' or 'use_source_highlight'
-   option in viewvc.conf to 1.
-
-3) You may also need to set 'enscript', 'highlight', or 'source_highlight'
-   option in the [utilities] section if the executables are not located 
-   on the system PATH.
-
-That's it!  Now when you view the contents of recognized filetypes in
-ViewVC, you should see colorized syntax.
+There are several options related to syntax highlighting in ViewVC's
+configuration file.  They come in two flavors:  those under the
+[options] section which enable the integration of one of the
+highlighting engines ('use_pygments', 'use_enscript', 'use_highlight',
+'use_source_highlight', etc.), and those under the [utilities] section
+which indicate where ViewVC can find the necessary helper programs
+('enscript', 'highlight', etc.).  So be sure to check the [utilities]
+configuration section for program paths you might need to configure
+based on the decision of which highlighting engine you've chosen under
+the [options] section.
 
 
 CVSGRAPH CONFIGURATION
