@@ -99,6 +99,67 @@ form { margin: 0; }
   background-color: #eeeeee;
 }
 
+/*** Pygments Markup Styles ***/
+#vc_markup .pygments-c { color: #408080; font-style: italic } /* Comment */
+#vc_markup .pygments-err { border: 1px solid #FF0000 } /* Error */
+#vc_markup .pygments-k { color: #008000; font-weight: bold } /* Keyword */
+#vc_markup .pygments-o { color: #666666 } /* Operator */
+#vc_markup .pygments-cm { color: #408080; font-style: italic } /* Comment.Multiline */
+#vc_markup .pygments-cp { color: #BC7A00 } /* Comment.Preproc */
+#vc_markup .pygments-c1 { color: #408080; font-style: italic } /* Comment.Single */
+#vc_markup .pygments-cs { color: #408080; font-style: italic } /* Comment.Special */
+#vc_markup .pygments-gd { color: #A00000 } /* Generic.Deleted */
+#vc_markup .pygments-ge { font-style: italic } /* Generic.Emph */
+#vc_markup .pygments-gr { color: #FF0000 } /* Generic.Error */
+#vc_markup .pygments-gh { color: #000080; font-weight: bold } /* Generic.Heading */
+#vc_markup .pygments-gi { color: #00A000 } /* Generic.Inserted */
+#vc_markup .pygments-go { color: #808080 } /* Generic.Output */
+#vc_markup .pygments-gp { color: #000080; font-weight: bold } /* Generic.Prompt */
+#vc_markup .pygments-gs { font-weight: bold } /* Generic.Strong */
+#vc_markup .pygments-gu { color: #800080; font-weight: bold } /* Generic.Subheading */
+#vc_markup .pygments-gt { color: #0040D0 } /* Generic.Traceback */
+#vc_markup .pygments-kc { color: #008000; font-weight: bold } /* Keyword.Constant */
+#vc_markup .pygments-kd { color: #008000; font-weight: bold } /* Keyword.Declaration */
+#vc_markup .pygments-kp { color: #008000 } /* Keyword.Pseudo */
+#vc_markup .pygments-kr { color: #008000; font-weight: bold } /* Keyword.Reserved */
+#vc_markup .pygments-kt { color: #B00040 } /* Keyword.Type */
+#vc_markup .pygments-m { color: #666666 } /* Literal.Number */
+#vc_markup .pygments-s { color: #BA2121 } /* Literal.String */
+#vc_markup .pygments-na { color: #7D9029 } /* Name.Attribute */
+#vc_markup .pygments-nb { color: #008000 } /* Name.Builtin */
+#vc_markup .pygments-nc { color: #0000FF; font-weight: bold } /* Name.Class */
+#vc_markup .pygments-no { color: #880000 } /* Name.Constant */
+#vc_markup .pygments-nd { color: #AA22FF } /* Name.Decorator */
+#vc_markup .pygments-ni { color: #999999; font-weight: bold } /* Name.Entity */
+#vc_markup .pygments-ne { color: #D2413A; font-weight: bold } /* Name.Exception */
+#vc_markup .pygments-nf { color: #0000FF } /* Name.Function */
+#vc_markup .pygments-nl { color: #A0A000 } /* Name.Label */
+#vc_markup .pygments-nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
+#vc_markup .pygments-nt { color: #008000; font-weight: bold } /* Name.Tag */
+#vc_markup .pygments-nv { color: #19177C } /* Name.Variable */
+#vc_markup .pygments-ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
+#vc_markup .pygments-w { color: #bbbbbb } /* Text.Whitespace */
+#vc_markup .pygments-mf { color: #666666 } /* Literal.Number.Float */
+#vc_markup .pygments-mh { color: #666666 } /* Literal.Number.Hex */
+#vc_markup .pygments-mi { color: #666666 } /* Literal.Number.Integer */
+#vc_markup .pygments-mo { color: #666666 } /* Literal.Number.Oct */
+#vc_markup .pygments-sb { color: #BA2121 } /* Literal.String.Backtick */
+#vc_markup .pygments-sc { color: #BA2121 } /* Literal.String.Char */
+#vc_markup .pygments-sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
+#vc_markup .pygments-s2 { color: #BA2121 } /* Literal.String.Double */
+#vc_markup .pygments-se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
+#vc_markup .pygments-sh { color: #BA2121 } /* Literal.String.Heredoc */
+#vc_markup .pygments-si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */
+#vc_markup .pygments-sx { color: #008000 } /* Literal.String.Other */
+#vc_markup .pygments-sr { color: #BB6688 } /* Literal.String.Regex */
+#vc_markup .pygments-s1 { color: #BA2121 } /* Literal.String.Single */
+#vc_markup .pygments-ss { color: #19177C } /* Literal.String.Symbol */
+#vc_markup .pygments-bp { color: #008000 } /* Name.Builtin.Pseudo */
+#vc_markup .pygments-vc { color: #19177C } /* Name.Variable.Class */
+#vc_markup .pygments-vg { color: #19177C } /* Name.Variable.Global */
+#vc_markup .pygments-vi { color: #19177C } /* Name.Variable.Instance */
+#vc_markup .pygments-il { color: #666666 } /* Literal.Number.Integer.Long */
+
 /*** Highlight Markup Styles ***/
 #vc_markup .num  { color: #000000; }
 #vc_markup .esc  { color: #bd8d8b; }
