@@ -30,6 +30,7 @@ Version 1.1.0 (released ??-???-????)
   * fix cache control bugs (issue #259)
   * add RSS feed URL generation for file history
   * add support for remote creation of ViewVC checkins database
+  * add integration with Pygments for syntax highlighting
 
 Version 1.0.5 (released 28-Feb-2008)
 
